# FIJ_XQQ_draw_logo

./: .gitignore  CMakeLists.txt  README.md  package.xml  paths_output.txt
install/nov_fij_draw_logo/share/ament_index/resource_index/package_run_dependencies/: nov_fij_draw_logo
install/nov_fij_draw_logo/share/ament_index/resource_index/parent_prefix_path/: nov_fij_draw_logo
install/nov_fij_draw_logo/share/nov_fij_draw_logo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nov_fij_draw_logo/share/nov_fij_draw_logo/cmake/: nov_fij_draw_logoConfig-version.cmake  nov_fij_draw_logoConfig.cmake
install/nov_fij_draw_logo/share/nov_fij_draw_logo/environment/: ament_prefix_path.dsv  path.dsv
install/nov_fij_draw_logo/share/nov_fij_draw_logo/launch/: launch_example1.launch.py  launch_example2.launch.py
launch/: launch_example1.launch.py  logo_launch.py
log/: latest_build
src/: draw_logo.cpp  pain.cpp  parse_svg.py
